Added random cite commands for biblatex

--- a/nvim/.config/nvim/snippet/usepackage_biblatex.tex
+++ b/nvim/.config/nvim/snippet/usepackage_biblatex.tex
@@ -15,3 +15,7 @@
 %	url={https://example.org},
 %}
 %\end{filecontents}
+%\DeclareCiteCommand{\bciteonline}[]{}{\printfield[citetitle]{labeltitle} (\printlist{organization}\setunit{\addcomma\space}\usebibmacro{url+urldate})}{}{}
+%\DeclareCiteCommand{\cciteonline}[]{}{\printlist{organization} (\usebibmacro{url+urldate})}{}{}
+%\DeclareCiteCommand{\bcitearticle}[]{}{\printfield[citetitle]{labeltitle} (\printlist{publisher}\setunit{\addcomma\space}\usebibmacro{date})}{}{}
+%\DeclareCiteCommand{\bcitebook}[]{}{\printfield[citetitle]{labeltitle} (\printlist{publisher}\setunit{\addcomma\space}\printfield{year})}{}{}
