--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -8,9 +8,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
 \usepackage[
-	colorlinks,
-	linkcolor=black, urlcolor=magenta,
-	%allcolors=blue,
-	%frenchlinks
+        colorlinks,
+        allcolors=black, urlcolor=magenta,
 ]{hyperref}
 \usepackage{fnpct}
