--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -1,8 +1,7 @@
 \usepackage[iso,swedish]{isodate}
 \usepackage[
-	main=english,
-	%main=swedish
-	swedish
+        main=english, swedish,
+        %main=swedish, english,
 ]{babel}
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
