Added placeholders in bibtex snippets

--- a/nvim/.config/nvim/snippet/book.bib
+++ b/nvim/.config/nvim/snippet/book.bib
@@ -1,10 +1,15 @@
-@book{example2021,
-	title={An placeholder latex citation},
-	author={John doe},
-	year={2019},
-	editor={Jane doe},
-	publisher={Random pulisher},
-	location={Stockholm},
-	edition={3},
-	isbn={9783161484100},
+@book{<++>,
+	title={<++>},
+	author={<++>},
+	publisher={<++>},
+	year={<++>},
+	editor={<++>},
+	editortype={<++>},
+	translator={<++>},
+	introduction={<++>},
+	foreword={<++>},
+	afterword={<++>},
+	volume={<++>},
+	edition={<++>},
+	isbn={<++>},
 }
