--- a/nvim/.config/nvim/snippet/online.bib
+++ b/nvim/.config/nvim/snippet/online.bib
@@ -1,8 +1,10 @@
-@online{example1999,
-        title={<++>},
-        organization={<++>},
-        date={<++>},
-        urldate={<++>},
-        note={Last updated <++>},
-        url={<++>},
+@online{<++>,
+	title={<++>},
+	author={<++>},
+	editor={<++>},
+	organization={<++>},
+	date={<++>},
+	note={Last updated <++>},
+	urldate={<++>},
+	url={<++>},
 }
