--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -1,13 +1,18 @@
 \usepackage[iso,swedish]{isodate}
 \usepackage[
-        main=english, swedish,
-        %main=swedish, english,
+	main=english, swedish,
+	%main=swedish, english,
 ]{babel}
 \usepackage{csquotes}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
 \usepackage[
-        colorlinks,
-        allcolors=black, urlcolor=magenta,
+	colorlinks,
+	allcolors=black, urlcolor=magenta,
 ]{hyperref}
 \usepackage{fnpct}
+%\usepackage[document]{ragged2e}
+%\usepackage[
+%	%doublespacing,
+%	onehalfspacing,
+%]{setspace}
