Changed default latex font size

--- a/nvim/.config/nvim/snippet/skeleton.tex
+++ b/nvim/.config/nvim/snippet/skeleton.tex
@@ -1,11 +1,9 @@
-\documentclass[a4paper]{article}
+\documentclass[12pt, a4paper]{article}
 
 \title{Title}
 \author{Author}
 \date{\today}
 
-\begin{document}
-
-\maketitle\tableofcontents
+\begin{document}\maketitle\tableofcontents\newpage
 
 \end{document}
