Wrapfigures and captions

--- a/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
+++ b/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
@@ -1,8 +1,11 @@
 \usepackage{array}
-\usepackage{caption}
+\usepackage[
+	%labelformat=empty,
+	font=small,
+]{caption}
 \usepackage{graphicx}
 %\usepackage{adjustbox}
 %\usepackage{tabularx}
 %\usepackage{diagbox}
 %\usepackage{tcolorbox}
-\usepackage{wrapfig}
+%\usepackage{wrapfig}
