Latex figure snippets

--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,4 +1,5 @@
 \begin{figure}[h] \centering
 	\includegraphics[height=5cm]{<++>}
-	\caption{<++> \parencite[<++>][]{<++>}} \label{fig:<++>}
-\end{figure}
+	\caption{<++> \footnotemark}
+	\label{fig:<++>}
+\end{figure} \footnotetext{\fullcite[<++>][]{<++>}}
