--- a/nvim/.config/nvim/snippet/wrapfigure.tex
+++ b/nvim/.config/nvim/snippet/wrapfigure.tex
@@ -1,4 +1,5 @@
-\begin{wrapfigure}[10]{r}{5.1cm}\centering
-	\includegraphics[height=3cm]{<++>}
-	\caption{<++> (Bild från \enquote{<++>})} \label{fig:<++>}
-\end{wrapfigure}
+\begin{wrapfigure}[10]{r}{5.1cm} \centering
+	\includegraphics[height=5cm]{<++>}
+	\caption{<++> \footnotemark}
+	\label{fig:<++>}
+\end{wrapfigure} \footnotetext{\fullcite[<++>][]{<++>}}
