--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -9,6 +9,7 @@
 \usepackage[
 	colorlinks,
 	allcolors=black, urlcolor=magenta,
+	%draft,
 ]{hyperref}
 \usepackage{fnpct}
 %\usepackage[document]{ragged2e}
