--- a/nvim/.config/nvim/snippet/usepackage_biblatex.tex
+++ b/nvim/.config/nvim/snippet/usepackage_biblatex.tex
@@ -2,7 +2,9 @@
 	%sorting=none,
 	date=iso, seconds=true, alldates=iso,
 	%style=verbose-ibid,
-	%style=science,
 	%style=apa,
+	%style=science,
+	bibstyle=apa, citestyle=verbose-ibid,
 ]{biblatex}
 \addbibresource{\jobname.bib}
+\usepackage{xurl}
