--- a/nvim/.config/nvim/snippet/usepackage_basic.tex
+++ b/nvim/.config/nvim/snippet/usepackage_basic.tex
@@ -10,6 +10,7 @@
 	colorlinks,
 	allcolors=black, urlcolor=magenta,
 	%draft,
+	linktocpage,
 ]{hyperref}
 \usepackage{fnpct}
 %\usepackage[document]{ragged2e}
