--- a/nvim/.config/nvim/snippet/figure.tex
+++ b/nvim/.config/nvim/snippet/figure.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h] \centering
+\begin{figure}[htbp] \centering
 	\includegraphics[height=5cm]{<++>}
 	\caption{<++> \footnotemark}
 	\label{fig:<++>}
