Fields for online.bib

--- a/nvim/.config/nvim/snippet/online.bib
+++ b/nvim/.config/nvim/snippet/online.bib
@@ -1,10 +1,11 @@
 @online{<++>,
 	title={<++>},
 	author={<++>},
+	shortauthor={<++>},
 	editor={<++>},
 	organization={<++>},
 	date={<++>},
-	note={Last updated <++>},
+	origdate={<++>},
 	urldate={<++>},
 	url={<++>},
 }
