--- a/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
+++ b/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
@@ -1,7 +1,7 @@
 \usepackage{array}
 \usepackage[
 	%labelformat=empty,
-	font=small,
+	%font=small,
 ]{caption}
 \usepackage{graphicx}
 %\usepackage{adjustbox}
