Misc Tex snippets

--- a/nvim/.config/nvim/snippet/usepackage_biblatex.tex
+++ b/nvim/.config/nvim/snippet/usepackage_biblatex.tex
@@ -1,10 +1,9 @@
 \usepackage[
 	%sorting=none,
 	date=iso, seconds=true, alldates=iso,
-	%style=verbose-ibid,
 	%style=apa,
-	%style=science,
-	bibstyle=apa, citestyle=verbose-ibid,
+	%style=authoryear-ibid,
+	style=oxnotes,
 ]{biblatex}
 \addbibresource{\jobname.bib}
 \usepackage{xurl}
