--- a/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
+++ b/nvim/.config/nvim/snippet/usepackage_figuresandtables.tex
@@ -4,6 +4,7 @@
 	%font=small,
 ]{caption}
 \usepackage{graphicx}
+\graphicspath{{images/}{pictures/}{img/}{pics/}}
 %\usepackage{adjustbox}
 %\usepackage{tabularx}
 %\usepackage{diagbox}
