--- a/nvim/.config/nvim/snippet/usepackage_physics.tex
+++ b/nvim/.config/nvim/snippet/usepackage_physics.tex
@@ -4,6 +4,9 @@
 	inter-unit-product=,
 	group-digits=false,
 	output-product=\cdot,
+	mode=match,
+	range-units=single,
+	range-phrase={$-$},
 ]{siunitx}
 
 %\usepackage[
