--- a/nvim/.config/nvim/snippet/skeleton.tex
+++ b/nvim/.config/nvim/snippet/skeleton.tex
@@ -101,7 +101,7 @@
 
 %\usepackage{tikz}
 %\usepackage{pgfplots}
-%\usepackage{amsmath}
+%\usepackage{amsmath} % For align enviroment
 %\usepackage{amssymb}
 %\usepackage{cases}
 
@@ -130,6 +130,12 @@
 %	redox/explicit-sign=true,
 %}
 %\usepackage{chemfig} % Drawing Molecules
+
+%\usepackage{sectsty}
+%\sectionfont{\large\itshape}
+
+%\newif\ifdraft
+%\drafttrue
 
 \title{Title}
 \author{Author}
